--- a/index.html
+++ b/index.html
@@ -1624,6 +1624,7 @@
                     <span>~</span>
                     <input type="number" id="maxRound" value="1210" max="1210"
                         oninput="if(parseInt(this.value) > 1210) this.value = 1210;">
+                    <button class="btn-sm" style="background:#1976d2;" onclick="setRecent10Rounds()">최근 10회</button>
                     <button class="btn-sm" onclick="refreshRecentRounds()">조회</button>
                 </div>
                 <!-- Data Availability Notice -->
@@ -2281,6 +2282,18 @@
         function refreshRecentRounds() {
             const maxR = parseInt(document.getElementById('maxRound').value) || 9999;
             updateRecentRounds(maxR);
+        }
+
+        function setRecent10Rounds() {
+            const currentMax = 1210; // TODO: Should be dynamic but 1210 is our current base
+            document.getElementById('maxRound').value = currentMax;
+            document.getElementById('minRound').value = currentMax - 9;
+
+            // Apply filter immediately
+            updateMapMarkers();
+            refreshRecentRounds();
+
+            showToast(`최근 10회차(${currentMax - 9}~${currentMax}) 데이터로 갱신되었습니다.`, "success");
         }
 
         function updateRecentRounds(maxRound) {
