Rename 'Apply' button to '당첨횟수/당첨방식 적용'

--- a/index.html
+++ b/index.html
@@ -1678,7 +1678,7 @@
                     <label class="checkbox-item"><input type="checkbox" id="methodSemi" checked> 반자동</label>
                 </div>
             </div>
-            <button class="btn-apply" onclick="applyFilters()">적용하기</button>
+            <button class="btn-apply" onclick="applyFilters()">당첨횟수/당첨방식 적용</button>
             <div class="stats-card">
                 <div class="stat-item"><span>전체 데이터</span> <span id="totalDataCount">0</span></div>
                 <div class="stat-item"><span>필터링 결과</span> <span id="filteredCount" class="stat-value">0</span>
