Responsive font size for round filter: PC 90%, Mobile 110%

--- a/index.html
+++ b/index.html
@@ -140,6 +140,12 @@
             border-radius: 6px;
         }
 
+        .round-title {
+            font-size: 11.7px !important;
+            /* PC: 13px * 0.9 */
+            color: #333 !important;
+        }
+
         .checkbox-group {
             display: flex;
             flex-wrap: wrap;
@@ -1635,7 +1641,7 @@
         <div id="sidebar">
             <h1>🎰 KINOV Lotto Map</h1>
             <div class="section">
-                <span class="section-title" style="font-size: 1.2rem; color: #333;">📅 회차 필터 (Round)</span>
+                <span class="section-title round-title">📅 회차 필터 (Round)</span>
                 <div class="input-row">
                     <input type="number" id="minRound" value="1201">
                     <span>~</span>
