Finalize responsive font size for round filter: PC 90%, Mobile 110%

--- a/index.html
+++ b/index.html
@@ -759,6 +759,11 @@
                 font-size: 12px;
             }
 
+            .round-title {
+                font-size: 14.3px !important;
+                /* Mobile: 13px * 1.1 */
+            }
+
             .gps-button {
                 position: absolute !important;
                 top: 140px !important;
