--- a/index.html
+++ b/index.html
@@ -141,9 +141,22 @@
         }
 
         .round-title {
-            font-size: 11.7px !important;
-            /* PC: 13px * 0.9 */
+            font-size: 13.65px !important;
+            /* PC: 13px * 1.05 */
             color: #333 !important;
+        }
+
+        .data-notice {
+            font-size: 12.35px !important;
+            /* PC: 13px * 0.95 */
+            font-weight: bold;
+            color: #d32f2f;
+            margin-top: 6px;
+            line-height: 1.4;
+            background: rgba(255, 0, 0, 0.05);
+            padding: 6px;
+            border-radius: 4px;
+            border: 1px solid rgba(255, 0, 0, 0.1);
         }
 
         .checkbox-group {
@@ -1656,8 +1669,7 @@
                     <button class="btn-sm" onclick="refreshRecentRounds()">조회</button>
                 </div>
                 <!-- Data Availability Notice -->
-                <div
-                    style="font-size:12.6px; font-weight:bold; color:#d32f2f; margin-top:6px; line-height:1.4; background:rgba(255,0,0,0.05); padding:6px; border-radius:4px; border:1px solid rgba(255,0,0,0.1);">
+                <div class="data-notice">
                     1. 1등 당첨번호는 1회차부터 제공<br>
                     2. 1등 판매점현황은 262회차부터 제공
                 </div>
