버튼 이름 변경: '조회' → '범위수동조회'

--- a/index.html
+++ b/index.html
@@ -1757,7 +1757,7 @@
                             <div class="dropdown-item" onclick="setRecentNRounds('all')">전체</div>
                         </div>
                     </div>
-                    <button class="btn-sm" onclick="applyFilters()">조회</button>
+                    <button class="btn-sm" onclick="applyFilters()">범위수동조회</button>
                 </div>
                 <!-- Data Availability Notice -->
                 <div class="data-notice">
