모바일에서 전체 데이터/필터링 결과 숫자 왼쪽으로 조정

--- a/index.html
+++ b/index.html
@@ -1732,6 +1732,19 @@
             color: #1976d2;
             margin-top: 5px;
         }
+
+        /* Mobile Responsive Styles */
+        @media (max-width: 768px) {
+            .stats-card {
+                padding: 15px 5px 15px 15px;
+                /* 오른쪽 패딩을 5px로 줄여 숫자가 잘리지 않도록 */
+            }
+
+            .stat-item {
+                padding-right: 5px;
+                /* 추가 여백으로 숫자가 화면 끝에 닿지 않도록 */
+            }
+        }
     </style>
 </head>
 
