모바일 숫자 위치 추가 조정: 왼쪽으로 0.5cm 더 이동

--- a/index.html
+++ b/index.html
@@ -1736,13 +1736,13 @@
         /* Mobile Responsive Styles */
         @media (max-width: 768px) {
             .stats-card {
-                padding: 15px 5px 15px 15px;
-                /* 오른쪽 패딩을 5px로 줄여 숫자가 잘리지 않도록 */
+                padding: 15px 15px 15px 15px;
+                /* 오른쪽 패딩을 15px로 증가하여 숫자가 왼쪽으로 이동 */
             }
 
             .stat-item {
-                padding-right: 5px;
-                /* 추가 여백으로 숫자가 화면 끝에 닿지 않도록 */
+                padding-right: 15px;
+                /* 오른쪽 여백 증가로 숫자가 화면 왼쪽으로 이동 */
             }
         }
     </style>
