--- a/index.html
+++ b/index.html
@@ -2078,7 +2078,8 @@
                 <div class="back-btn" onclick="closeStatModal()">
                     <span>❮</span> 닫기
                 </div>
-                <div>번호별 출현횟수 <span style="font-size: 10px; opacity: 0.8; vertical-align: middle;">(보너스 제외)</span>
+                <div style="text-align: center;">번호별 출현횟수 <span
+                        style="font-size: 10px; opacity: 0.8; vertical-align: middle;">(보너스 제외)</span>
                 </div>
                 <div style="width: 45px;"></div>
             </div>
