번호별 출현횟수 제목 완전한 가운데 정렬 (flex: 1 추가)

--- a/index.html
+++ b/index.html
@@ -2078,7 +2078,7 @@
                 <div class="back-btn" onclick="closeStatModal()">
                     <span>❮</span> 닫기
                 </div>
-                <div style="text-align: center;">번호별 출현횟수 <span
+                <div style="flex: 1; text-align: center;">번호별 출현횟수 <span
                         style="font-size: 10px; opacity: 0.8; vertical-align: middle;">(보너스 제외)</span>
                 </div>
                 <div style="width: 45px;"></div>
