--- a/index.html
+++ b/index.html
@@ -1754,6 +1754,11 @@
             .freq-title-br {
                 display: block;
             }
+
+            /* 모바일에서만 제목 줄 간격 축소 */
+            .freq-header>div:nth-child(2) {
+                line-height: 1.3;
+            }
         }
     </style>
 </head>
