--- a/index.html
+++ b/index.html
@@ -1757,7 +1757,7 @@
 
             /* 모바일에서만 제목 줄 간격 축소 */
             .freq-header>div:nth-child(2) {
-                line-height: 1.3;
+                line-height: 1.1;
             }
         }
     </style>
@@ -2094,9 +2094,10 @@
                     <span>❮</span> 닫기
                 </div>
                 <div style="flex: 1; text-align: center;">번호별 출현횟수<br class="freq-title-br"><span
-                        style="font-size: 10px; opacity: 0.7;">(보너스 제외)</span>
+                        style="font-size: 10px; color: #e74c3c; font-weight: 600;">(보너스 번호제외)</span>
                 </div>
-                <div style="width: 45px;"></div>
+                <div class="freq-close-btn" onclick="closeStatModal()"
+                    style="cursor: pointer; font-size: 24px; color: white; width: 45px; text-align: center;">✕</div>
             </div>
 
             <div class="freq-body">
