모바일에서만 (보너스 번호제외) 글자 간격 0.3cm 확대

--- a/index.html
+++ b/index.html
@@ -1759,6 +1759,11 @@
             .freq-header>div:nth-child(2) {
                 line-height: 1.1;
             }
+
+            /* 모바일에서만 (보너스 번호제외) 글자 간격 넓히기 */
+            .freq-header>div:nth-child(2) span {
+                letter-spacing: 0.3cm;
+            }
         }
     </style>
 </head>
