수정: 필터 버튼(전체/최근10주 등) 간격 0.3cm 확대

--- a/index.html
+++ b/index.html
@@ -1760,9 +1760,9 @@
                 line-height: 1.1;
             }
 
-            /* 모바일에서만 (보너스 번호제외) 글자 간격 넓히기 */
-            .freq-header>div:nth-child(2) span {
-                letter-spacing: 0.3cm;
+            /* 모바일에서만 필터 버튼 간격 확대 (0.3cm) */
+            .freq-filter-row {
+                gap: 26px;
             }
         }
     </style>
